hphp/hack/test/typecheck/inout/bad_inout_decl_generator.php.exp
File "bad_inout_decl_generator.php", line 4, characters 3-10:
Parameters may not be marked `inout` on generators (Parsing[1002])
